# minicrust

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml  version-tag.yml
src/: constants.rs  main.rs  renderer.rs  world.rs
